force-app/main/default/objects/QuestionGenerationJob__e/QuestionGenerationJob__e.object-meta.xml
<CustomObject>
    <label>Question Generation Job Event</label>
    <pluralLabel>Question Generation Job Events</pluralLabel>
</CustomObject>