force-app/main/default/objects/QuestionGenerationJob__e/fields/Generated_Count__c.field-meta.xml
<CustomField>
    <fullName>Generated_Count__c</fullName>
    <label>Generated Count</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>