force-app/main/default/objects/QuestionGenerationJob__e/fields/Tenant_Id__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Id__c</fullName>
    <label>Tenant Id</label>
    <type>Text</type>
    <length>120</length>
</CustomField>